# backtesting

./: .gitignore  Cargo.toml  EURUSDc_Daily.csv  EURUSDc_M15.csv  README.md  dll.md  history_order.csv  main.py
analyze/: Cargo.toml  a.mq5  daily_profile_stats.csv  ea1.mq5
analyze/src/: main.rs
demo/: Cargo.toml
demo/src/: main.rs
demo1/: main.py
demo2/ea/: classic.mq5  demo1.mq5  demo3.mq5
demo2/include/: trade.mqh
demo2/script/: demo1.mq5  demo2.mq5  demo3.mq5
rustdll/: Cargo.toml  README.md  ea.mq5  ea2.mq5  ea3.mq5  ea_pro.mq5  ea_pro_re.mq5  ok.mq5
rustdll/local_server/: go.mod  main.go
rustdll/src/: conversion.rs  lib.bak  lib.bak2  lib.bak3  lib.rs
src/: broker.rs  conf.rs  error.rs  main.rs  manager.rs  positions.rs  statistics.rs  strategy.rs  tick.rs  utils.rs
test/demo1/: main.py
test/demo2/: ea.mq5  ea2.mq5  ea3.mq5
test/demo2/ea/: demo2.mq5
test/demo2/include/: trade2.mqh
test/demo2/script/: demo2.mq5  demo3.mq5
