[package]
name = "rustdll"
version = "0.1.0"
edition = "2021"

[dependencies]
ureq = "2.10.1"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
lazy_static = "1.5.0"
csv = "1.3.0"
rand = "0.9.0-alpha.2"

[lib]
name = "rustdll"
# path = "src/hello.rs"
crate-type = ["cdylib"]
